# sdltest

./: .gitignore  AUTHORS  NEWS  README  README.md  bootstrap.sh  configure  configure.ac  makefile.am  makefile.in
src/: Result.hpp  SDLApplication.cpp  SDLApplication.hpp  SDLWindow.cpp  SDLWindow.hpp  config.hpp  config.hpp.in  main.cpp  makefile.am  makefile.in
src/.deps/: libsdltest_a-main.Po  main.Po  sdltest-main.Po
